--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    touch-action: manipulation;
   }
   .button-grid .minus { background: #ff8a80; }
   .button-grid .plus { background: #80cbc4; }
